--- a/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
@@ -1,5 +1,4 @@
-@page "/vote/{SessionId}/{UserName}"
-@using DevOpsQuickScan.Web.Components.CustomComponents
+@page "/vote/{SessionId:guid}/{DisplayName}"
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <div class="quickscan-card quickscan-card-wide">
