--- a/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
@@ -1,32 +1,12 @@
 @page "/vote/{SessionId:guid}/{DisplayName}"
+@using DevOpsQuickScan.Web.Components.CustomComponents
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <div class="quickscan-card quickscan-card-wide">
-    <p>Voting session name: <strong>@_sessionName</strong></p>
 
-    @if (!string.IsNullOrEmpty(_currentQuestion?.Text))
+    @if (!string.IsNullOrEmpty(_currentQuestion?.Question.Text))
     {
-        @* <QuestionComponent CurrentQuestion="_currentQuestion" /> *@
-        
-        <div class="question-container">
-            <p class="question-text">@_currentQuestion.Text</p>
-
-            <div class="answers-container mt-3">
-                @foreach (var answer in _currentQuestion.Answers)
-                {
-                    <button class="btn btn-outline-primary w-100 mb-2"
-                            @onclick="() => SelectAnswer(answer.Id)">
-                        @answer.Text
-                    </button>
-                }
-            </div>
-
-            <div class="vote-controls mt-4">
-                <button class="btn btn-primary w-100" @onclick="SubmitVote" disabled="@(!_isAnswerSelected)">
-                    Vote
-                </button>
-            </div>
-        </div>
+        <ParticipantQuestionComponent CurrentQuestion="_currentQuestion" />
     }
     else
     {
