--- a/src/DevOpsQuickScan.BlazorApp/Components/Layout/MainLayout.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Layout/MainLayout.razor
@@ -6,8 +6,9 @@
     @* </div> *@
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="px-4 d-flex align-items-center justify-content-between">
+            <a href="/"><img src="@Assets["/img/logo.jpg"]" height="50" alt="Logo" class="logo" /></a>
+            <a href="/about">About</a>
         </div>
 
         <article class="content px-4">
