--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
@@ -13,16 +13,20 @@ Welcome to your new app, person with id @_userId.
 @switch (Session.CurrentState)
 {
     case SessionState.AnsweringQuestions:
-        <QuestionComponent @key="@_questionId"
-                           UserId="@_userId" 
-                           SessionService="@Session" 
-                           QuestionId="@_questionId"/>
-        
+        @if (_currentQuestion is not null && _userId is not null)
+        {
+            var prevAnswer = Session.GetAnswer(_userId, _currentQuestion.Id);
+
+            <QuestionComponent Question="@_currentQuestion" 
+                               PreviousAnswer="@prevAnswer"
+                               OnQuestionAnswered="@AnswerQuestion"/>
+        }
         break;
     case SessionState.RevealingAnswers:
-        <RevealComponent @key="@_questionId"
-                         SessionService="@Session" 
-                         QuestionId="@_questionId"/>
+        @if (_revealedQuestion is not null)
+        {
+            <RevealComponent RevealedQuestion="@_revealedQuestion" />
+        }
         break;
     case SessionState.NotStarted:
     default:
@@ -33,18 +37,40 @@ Welcome to your new app, person with id @_userId.
 @code {
 
     private string? _userId;
-    private int _questionId;
+    private bool _initialized = false;
+    private Question? _currentQuestion;
+    private RevealedQuestion? _revealedQuestion;
 
-    protected override async Task OnAfterRenderAsync(bool firstRender) =>
-        _userId = await UserId.GetAsync();
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender && !_initialized)
+        {
+            _userId = await UserId.GetAsync();
+            _initialized = true;
+            StateHasChanged(); 
+        }
+    }
 
     protected override void OnInitialized()
     {
-        Session.OnSessionStateChanged += async (state, questionId) =>
+        _currentQuestion = Session.CurrentQuestion;
+      
+        Session.OnQuestionAsked += async (state, question) =>
         {
-            _questionId = questionId;
+            _currentQuestion = question;
             await InvokeAsync(StateHasChanged);
-        }; 
+        };
+
+        Session.OnAnswersRevealed += async (state, question) =>
+        {
+            _revealedQuestion = question;
+            await InvokeAsync(StateHasChanged);
+        };
     }
     
+    private void AnswerQuestion(QuestionAnsweredDto answer)
+    {
+        Session.AnswerQuestion(_userId!, answer.QuestionId, answer.AnswerId);
+    }
+
 }
