--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
@@ -1,66 +1,48 @@
 @using DevOpsQuickScan.Core
 
-@if (_currentQuestion is not null)
-{
-    <div class="question-block" style="margin-bottom: 1.5rem;">
-        <strong>@_currentQuestion.Text</strong>
-        <ul>
-            @foreach (var answer in @_currentQuestion.Answers)
-            {
-                bool isSelected = answer.Id == _selectedAnswer;
-                <button class="answer-button @(isSelected ? "selected" : "")"
-                        @onclick="@(() => SelectAnswer(answer))"
-                        disabled="@_hasSubmitted">
-                    @answer.Text
-                </button>
-            }
 
-            <div style="margin-top: 1rem;">
-                <button @onclick="SubmitAnswer"
-                        disabled="@(!CanSubmit)">
-                    Submit Answer
-                </button>
-            </div>
+<div class="question-block" style="margin-bottom: 1.5rem;">
+    <strong>@Question.Text</strong>
+    <ul>
+        @foreach (var answer in @Question.Answers)
+        {
+            bool isSelected = answer.Id == _selectedAnswer;
+            <button class="answer-button @(isSelected ? "selected" : "")"
+                    @onclick="@(() => SelectAnswer(answer))"
+                    disabled="@_hasSubmitted">
+                @answer.Text
+            </button>
+        }
 
-            @if (_hasSubmitted)
-            {
-                <p><em>Waiting for results…</em></p>
-            }
+        <div style="margin-top: 1rem;">
+            <button @onclick="SubmitAnswer"
+                    disabled="@(!CanSubmit)">
+                Submit Answer
+            </button>
+        </div>
 
-        </ul>
-    </div>
-}
+        @if (_hasSubmitted)
+        {
+            <p><em>Waiting for results…</em></p>
+        }
+
+    </ul>
+</div>
 
 @code {
 
-    [Parameter] public required string UserId { get; set; }
-    [Parameter] public required SessionService SessionService { get; set; }
-    [Parameter] public required int QuestionId { get; set; }
+    [Parameter] public required Question Question { get; set; }
+    [Parameter] public int? PreviousAnswer { get; set; }
+    [Parameter] public required EventCallback<QuestionAnsweredDto> OnQuestionAnswered { get; set; }
 
-    private Question? _currentQuestion;
-    
     private int? _selectedAnswer;
     private bool _hasSubmitted = false;
     private bool CanSubmit => _selectedAnswer is not null && !_hasSubmitted;
     
-    
-    protected override void OnInitialized() =>
-        LoadQuestion(QuestionId);
-
-    private void LoadQuestion(int questionId)
+    protected override void OnParametersSet()
     {
-        _currentQuestion = SessionService.Questions.First(q => q.Id == questionId);
-            
-        if(SessionService!.HasAnsweredCurrentQuestion(UserId!, _currentQuestion!.Id))
-        {
-            _selectedAnswer = SessionService.GetAnswer(UserId!, _currentQuestion!.Id);
-            _hasSubmitted = true;
-        }
-        else
-        {
-            _selectedAnswer = null;
-            _hasSubmitted = false;
-        } 
+        _selectedAnswer = PreviousAnswer;
+        _hasSubmitted = PreviousAnswer != null;
     }
 
     private void SelectAnswer(Answer answer)
@@ -69,12 +51,9 @@
             _selectedAnswer = answer.Id;
     }
 
-    private void SubmitAnswer()
+    private async Task SubmitAnswer()
     {
-        if (_hasSubmitted || _currentQuestion is null || _selectedAnswer is null) 
-            return;
-
-        SessionService!.AnswerQuestion(UserId!, _currentQuestion.Id, _selectedAnswer.Value);
+        await OnQuestionAnswered.InvokeAsync(new QuestionAnsweredDto(Question.Id, _selectedAnswer!.Value));
         _hasSubmitted = true;
     }
 
