--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/RevealComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/RevealComponent.razor
@@ -1,22 +1,16 @@
 @using DevOpsQuickScan.Core
 
-<strong>@_question!.Text</strong>
+<strong>@RevealedQuestion!.Question</strong>
 <ul>
-    @foreach (var answer in _question.Answers)
+    @foreach (var answer in RevealedQuestion.Answers)
     {
         <div>
-            <label>@answer.Text (@SessionService.NumberOfAnswers(_question.Id, answer.Id))</label>
-            <div style="background: lightblue; width:@(SessionService.NumberOfAnswers(_question.Id, answer.Id) * 20)px; height: 20px;"></div>
+            <label>@answer.Text (@RevealedQuestion.Answers.Sum(x => x.Count))</label>
+            <div style="background: lightblue; width:@(answer.Count * 20)px; height: 20px;"></div>
         </div>
     }
 </ul>
 
 @code {
-    [Parameter] public required SessionService SessionService { get; set; }
-    [Parameter] public required int QuestionId { get; set; }
-
-    private Question? _question;
-
-    protected override void OnInitialized() =>
-        _question = SessionService.Questions.First(q => q.Id == QuestionId);
+    [Parameter] public required RevealedQuestion RevealedQuestion { get; set; }
 }
