--- a/src/DevOpsQuickScan.BlazorApp/Components/App.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/App.razor
@@ -7,7 +7,8 @@
     <base href="/"/>
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
     <link rel="stylesheet" href="@Assets["app.css"]"/>
-    <link rel="stylesheet" href="@Assets["DevOpsQuickScan.BlazorApp.styles.css"]"/>
+    <link rel="stylesheet" href="@Assets["DevOpsQuickScan.BlazorApp.styles.css"]"/> 
+    <link rel="stylesheet" href="@Assets["lib/font-awesome/all.css"]" />
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet @rendermode="InteractiveServer"/>
@@ -17,6 +18,7 @@
 <Routes @rendermode="InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="js/userStorage.js"></script>
+<script src="@Assets["lib/font-awesome/all.js"]"></script>
 </body>
 
 </html>
