--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
@@ -1,18 +1,28 @@
 @using DevOpsQuickScan.Core
 
+<div class="question-container">
 
-<div class="question-block" style="margin-bottom: 1.5rem;">
-    <strong>@Question.Text</strong>
-    <ul>
-        @foreach (var answer in @Question.Answers)
-        {
-            bool isSelected = answer.Id == _selectedAnswer;
-            <button class="answer-button @(isSelected ? "selected" : "")"
-                    @onclick="@(() => SelectAnswer(answer))"
-                    disabled="@_hasSubmitted">
-                @answer.Text
-            </button>
-        }
+    <!--// Question //-->
+    <div class="question-card">
+        <h3>@Question.Text <a href="@Question.Link" target="_blank"><i class="fa-solid fa-circle-info"></i></a></h3>
+    </div>
+
+    <!--// Answers //-->
+    <div class="answers-list mt-4">
+        <ul class="list-group">
+            @foreach (var answer in @Question.Answers)
+            {
+                bool isSelected = answer.Id == _selectedAnswer;
+                <li class="list-group-item">
+                    <button class="answer-button @(isSelected ? "selected" : "")"
+
+                            @onclick="@(() => SelectAnswer(answer))"
+                            disabled="@_hasSubmitted">
+                        @answer.Text
+                    </button>
+                </li>
+            }
+        </ul>
 
         <div style="margin-top: 1rem;">
             <button @onclick="SubmitAnswer"
@@ -25,8 +35,8 @@
         {
             <p><em>Waiting for results…</em></p>
         }
-
-    </ul>
+    </div>
+   
 </div>
 
 @code {
@@ -38,7 +48,7 @@
     private int? _selectedAnswer;
     private bool _hasSubmitted = false;
     private bool CanSubmit => _selectedAnswer is not null && !_hasSubmitted;
-    
+
     protected override void OnParametersSet()
     {
         _selectedAnswer = PreviousAnswer;
