--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
@@ -1,43 +1,52 @@
 @using DevOpsQuickScan.Core
 
-<div class="question-container">
-
-    <!--// Question //-->
-    <div class="question-card">
-        <h3>@Question.Text <a href="@Question.Link" target="_blank"><i class="fa-solid fa-circle-info"></i></a></h3>
-    </div>
-
-    <!--// Answers //-->
-    <div class="answers-list mt-4">
-        <ul class="list-group">
+<div class="card">
+    <h5 class="card-header d-flex align-items-center">
+        <span>Question</span>
+        <a href="@Question.Link" target="_blank" class="ms-auto">
+            <i class="fa-solid fa-circle-info"></i>
+        </a>
+    </h5>
+    <div class="card-body">
+        <h5 class="card-title">@Question.Text </h5>
+        
+        <div class="list-group list-group-flush overflow-hidden">
             @foreach (var answer in @Question.Answers)
             {
-                bool isSelected = answer.Id == _selectedAnswer;
-                <li class="list-group-item">
-                    <button class="answer-button @(isSelected ? "selected" : "")"
-
-                            @onclick="@(() => SelectAnswer(answer))"
-                            disabled="@_hasSubmitted">
-                        @answer.Text
-                    </button>
-                </li>
+                var isSelected = answer.Id == _selectedAnswer;
+                
+                <label class="card-text list-group-item d-flex justify-content-between align-items-center option-item @(isSelected ? "selected" : "")">
+                    <span class="flex-grow-1">@answer.Text</span>
+                    <input class="form-check-input me-3"
+                           type="radio"
+                           name="answer"
+                           value="@answer.Id"
+                           checked="@isSelected"
+                           disabled="@_hasSubmitted"
+                           @onclick="@(() => SelectAnswer(answer))" />
+                </label>
             }
-        </ul>
-
-        <div style="margin-top: 1rem;">
-            <button @onclick="SubmitAnswer"
+        </div> 
+        
+        <p></p>
+        
+        @if (!_hasSubmitted)
+        {
+            <button class="btn btn-primary"
+                    @onclick="SubmitAnswer"
                     disabled="@(!CanSubmit)">
                 Submit Answer
             </button>
-        </div>
-
-        @if (_hasSubmitted)
-        {
-            <p><em>Waiting for results…</em></p>
         }
+        else 
+        {
+            <p><em>Answer submitted, waiting for results…</em></p>
+        }
+        
     </div>
-   
 </div>
+
+   
 
 @code {
 
